--- a/styles/app.css
+++ b/styles/app.css
@@ -28,14 +28,6 @@ h5 {
     letter-spacing: 3px;
 }
 
-nav .ul {
-    text-transform: uppercase;
-    display: flex;
-    align-items: center;
-    list-style-type: none;
-    text-decoration: none;
-}
-
 nav li {
     display: inline-block;
     margin: 10px;
@@ -110,12 +102,6 @@ nav li:hover,
     justify-content: center;
 }
 
-.row.about-text {
-    text-align: start;
-    padding: 20px;
-    margin: 20px;
-}
-
 .about-text h3 {
     padding: 20px;
     line-height: 0.8rem;
@@ -180,10 +166,6 @@ hr {
     margin: 0;
 }
 
-.form {
-    margin-top: 10px;
-    width: 100%;
-}
 
 input {
     width: 100%;
@@ -191,15 +173,64 @@ input {
 }
 
 input[type=submit] {
+    margin: 20px 20px 0 0;
     width: 35%;
 }
+
 
 .container a {
     text-decoration: none;
 }
 
 footer {
+    margin-top: 20px;
     background: #d8ede9;
     padding: 40px;
     text-align: center;
+}
+
+@media (max-width:700px) {
+
+    .s-t-a-c {
+        text-align: center !important;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .logo {
+        font-weight: 600;
+        background: #d8ede9;
+    }
+
+    ul li {
+        font-weight: 300;
+        border: 4px solid #d8ede9;
+    }
+
+    .w-50 {
+        width: auto;
+    }
+
+    .l-h-normal {
+        line-height: 1 !important;
+    }
+
+    .padding {
+        padding: 0;
+    }
+
+    .padding:last-child {
+        padding-bottom: 10px;
+    }
+
+    input {
+        text-align: center;
+        align-self: center;
+        width: 100%;
+        padding: 10px;
+        margin: 10px;
+    }
 }
